--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "math-app",
   "version": "0.8.0",
   "private": true,
-  "homepage": "http://shaffan-NU.github.io/iparhaiMathGame",
+  "homepage": "http://shaffan-NU.github.io/Subtraction_CountingObjects",
   "dependencies": {
     "axios": "^0.21.4",
     "konva": "^8.1.4",
