--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "http://shaffan-NU.github.io/Subtraction_CountingObjects",
   "dependencies": {
+    "animate.css": "^4.1.1",
     "axios": "^0.21.4",
     "konva": "^8.1.4",
     "min-jquery": "^1.7.0",
