--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^16.14.0",
     "react-draggable": "^4.4.4",
     "react-konva": "^17.0.2-5",
+    "react-onclickoutside": "^6.12.0",
     "react-redux": "^6.0.1",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
