--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "moment": "^2.29.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-drag-drop-container": "^6.1.1",
     "react-draggable": "^4.4.4",
     "react-konva": "^17.0.2-5",
     "react-onclickoutside": "^6.12.0",
