--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "math-app",
   "version": "0.8.0",
   "private": true,
-  "homepage": "http://iparhai.github.io/Subtraction_CountingObjects",
+  "homepage": "https://iparhai.github.io/subtraction_counting_objects",
   "dependencies": {
     "animate.css": "^4.1.1",
     "axios": "^0.21.4",
